--- a/.ftpconfig
+++ b/.ftpconfig
@@ -5,7 +5,7 @@
   "user":"root",
   "pass":"0000",
   "promptForPass":"false",
-  "remote":"/work",
+  "remote":"/allnew",
   "local":"",
   "agent":"",
   "privatekey":"",
