--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@ c/**/hello
 c/**/*.o
 c/**/test
 
-
 ## java
 java/*.class
 
@@ -19,3 +18,9 @@ scala/**/target
 ## maven
 maven/target
 
+## nodejs
+node/**/node_modules
+
+## python
+python/**/.venv
+python/**/__pycache__/
