--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # .gitignore
-
 .ftpconfig
+
+# environment files
+.env
 
 ## c programing
 c/**/a.out
@@ -31,3 +33,8 @@ mongodb/*.json
 mongodb/**/*.json
 mongodb/**/*.mp4
 mongodb/backup
+
+## oracle
+oracle/node/dbConfig.js
+oracle/node/node_modules
+oracle/node/package-lock.json
