--- a/node/atlas/package.json
+++ b/node/atlas/package.json
@@ -1,7 +1,6 @@
 {
   "name": "atlas",
   "version": "1.0.0",
-  "description": "",
   "main": "atlas.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +11,6 @@
   "dependencies": {
     "axios": "^1.3.5",
     "dotenv": "^16.0.3"
-  }
+  },
+  "description": ""
 }
