--- a/node/miniproj/package.json
+++ b/node/miniproj/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "exercise",
+  "name": "miniproj",
   "version": "1.0.0",
-  "main": "app2.js",
+  "description": "",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,7 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "path": "^0.12.7",
     "sync-mysql": "^3.0.1"
-  },
-  "description": ""
+  }
 }
