--- a/node/miniproj/package.json
+++ b/node/miniproj/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "https": "^1.0.0",
     "mongoose": "^6.1.5",
     "morgan": "^1.10.0",
     "path": "^0.12.7"
