--- a/node/miniproj/package.json
+++ b/node/miniproj/package.json
@@ -10,13 +10,18 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.2.4",
+    "axios": "^1.3.6",
     "body-parser": "^1.20.2",
+    "circular-json": "^0.5.9",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "https": "^1.0.0",
     "mongoose": "^6.1.5",
     "morgan": "^1.10.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request": "^2.88.2",
+    "sync-mysql": "^3.0.1"
   },
   "description": ""
 }
