--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# .gitignore
+## .gitignore
 .ftpconfig
 
 # environment files
@@ -29,6 +29,7 @@ node/config/pool.js
 python/**/.venv
 python/**/__pycache__/
 python/**/.idea
+python/secret.json
 
 ## mongodb
 mongodb/*.json
@@ -40,5 +41,3 @@ mongodb/backup
 oracle/node/dbConfig.js
 oracle/node/node_modules
 oracle/node/package-lock.json
-
-## html
