--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,10 @@ mongodb filter=lfs diff=lfs merge=lfs -text
 package-lock.json filter=lfs diff=lfs merge=lfs -text
 scala filter=lfs diff=lfs merge=lfs -text
 python filter=lfs diff=lfs merge=lfs -text
+zz[[:space:]]chatGPT filter=lfs diff=lfs merge=lfs -text
+FinalProject filter=lfs diff=lfs merge=lfs -text
+Part3 filter=lfs diff=lfs merge=lfs -text
+Project filter=lfs diff=lfs merge=lfs -text
+nestjs filter=lfs diff=lfs merge=lfs -text
+react filter=lfs diff=lfs merge=lfs -text
+react-for-beginners filter=lfs diff=lfs merge=lfs -text
